# warfront

./: .gitignore  CLAUDE.md  README.md  config.json  config.py  core.py  editor.html  editor_server.py  header.py  io_watcher.py  main.py  map.py  pyproject.toml  ranks.py  renderer.py  sandbox.py  start.sh  warfront.sh  watcher.py
engines/: mission_00_trainee.py  mission_01_bfs.py  mission_02_dijkstra.py  mission_03_dfs.py  mission_04_topo.py  mission_05_mst.py  mission_06_uf.py  mission_07_dp.py  mission_08_greedy.py  mission_09_binary.py  mission_10_bitmask.py
problems/: 00_01_variables_trainee.py  00_02_loop_trainee.py  00_03_string_trainee.py  00_04_list_trainee.py  00_05_dict_trainee.py  00_06_function_trainee.py  00_07_condition_trainee.py  00_08_tuple_set_trainee.py  00_09_class_trainee.py  00_10_comprehension_trainee.py  01_bfs_advanced.py  01_bfs_beginner.py  01_bfs_intermediate.py  02_dijkstra_advanced.py  02_dijkstra_beginner.py  02_dijkstra_intermediate.py  03_dfs_advanced.py  03_dfs_beginner.py  03_dfs_intermediate.py  04_topo_advanced.py  04_topo_beginner.py  04_topo_intermediate.py  05_mst_advanced.py  05_mst_beginner.py  05_mst_intermediate.py  06_unionfind_advanced.py  06_unionfind_beginner.py  06_unionfind_intermediate.py  07_dp_advanced.py  07_dp_beginner.py  07_dp_intermediate.py  08_greedy_advanced.py  08_greedy_beginner.py  08_greedy_intermediate.py  09_binary_advanced.py  09_binary_beginner.py  09_binary_intermediate.py  10_bitmask_advanced.py  10_bitmask_beginner.py  10_bitmask_intermediate.py
scripts/: lint.sh  migrate_progress.sh  run_tests.sh  (+1 more)
(+24 files in other folders)
